<resources>
    <string name="app_name" translatable="false">Daily To Do List</string>

    <string name="settings">Settings</string>
    <string name="about_app">App to lets you track your daily to do list and helps you accomplish it.</string>
    <string name="check_my_other_apps">Check my other Apps</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="enter_task">Enter Task</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="delete_task">Delete Task</string>
    <string name="mark_as_done">Mark as Done</string>


</resources>
