<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6566387">


    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/delete_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/delete_task"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/mark_task_as_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/mark_as_done"
            android:textColor="@color/white" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lin"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--* Product details - Product Name, Quantity, Product Category, Price, Additional Data -->

            <TextView
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/enter_task"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textColorHint="#e2e1e1"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/enter_task_description"
                android:textColor="@color/white"
                android:textColorHint="#e2e1e1"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>