<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#d6566387"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_task"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_task"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--* Product details - Product Name, Quantity, Product Category, Price, Additional Data -->

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_task"
                android:textColor="@color/white"
                android:textColorHint="#e2e1e1"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_task_description"
                android:textColorHint="#e2e1e1"
                android:textColor="@color/white"
                android:textSize="18sp" />



        </LinearLayout>

    </ScrollView>

</RelativeLayout>